made toggle label buttens work, except spam-bug

--- a/react/src/components/EmailList.css
+++ b/react/src/components/EmailList.css
@@ -138,3 +138,6 @@ body.dark-mode .subject-line {
 .text-end {
   vertical-align: middle;
 }
+.label-icon-glow {
+  color: #0d6efd !important; /* primary blue glow */
+}
